[package]
name = "analog-multiplexer"
version = "1.0.2"
authors = ["Riskable <riskable@youknowwhat.com>"]
edition = "2018"
description = "A platform agnostic driver for 4051 and 4067 series analog multiplexers targetting the Rust embedded-hal"
license     = "Apache-2.0"
readme      = "README.md"
categories  = ["embedded", "hardware-support", "no-std"]
keywords    = ["embedded-hal-driver", "4051", "4067", "74hc4067", "74hc4051"]
repository = "https://github.com/riskable/analog-multiplexer"
documentation = "https://docs.rs/analog-multiplexer"
exclude     = [
    ".gitignore",
    "target/*"
]

[dependencies]
embedded-hal = "0.2.4"